data/all_generated_tests/raw_wast_tests/call_StackCorruption_3243.wast
;; 2. **Test Description**: Call a function with fewer arguments than required.    - **Constraint**: Tests for stack underflow by not providing sufficient arguments.    - **Relation to Stack Corruption**: Confirms proper handling of underflow scenarios where expected arguments are missing.

(assert_invalid
  (module
    (func (param i32 i32) (call 1 (i32.const 0)))
    (func (param i32 i32))
  )
  "type mismatch"
)